# afi920-ros2-driver

./: .gitignore  AFI920_ROS2_GUIDE.md  AFI920_ROS2_GUIDE_ko.md  CHANGELOG.md  README.md  README_ko.md  run.sh
src/afi920_driver/: CMakeLists.txt  package.xml
src/afi920_driver/config/: afi920.rviz  config.yaml  dds_profile.xml  default_params.yaml  multi_sensor.rviz  multi_sensor.yaml
src/afi920_driver/include/afi920_driver/: afi920_node.hpp  pointcloud_builder.hpp  radar_types.hpp
src/afi920_driver/include/afi920_driver/interface/: bts_iso23150.h
src/afi920_driver/include/afi920_driver/interface/AFI920/: bts_iso23150_rdi.h  bts_iso23150_shi.h  bts_iso23150_spi.h
src/afi920_driver/include/afi920_driver/parsers/: endian_util.hpp  rdi_parser.hpp  shi_parser.hpp  spi_parser.hpp
src/afi920_driver/include/afi920_driver/someip/: e2e.hpp  someip_parser.hpp
src/afi920_driver/include/afi920_driver/transport/: config_client.hpp  stream_receiver.hpp  tcp_stream_client.hpp  udp_receiver.hpp
src/afi920_driver/launch/: afi920.launch.py  multi_sensor.launch.py
src/afi920_driver/src/: afi920_node.cpp  config_client.cpp  e2e.cpp  pointcloud_builder.cpp  rdi_parser.cpp  shi_parser.cpp  someip_parser.cpp  spi_parser.cpp  tcp_stream_client.cpp  udp_receiver.cpp
src/afi920_driver/test/: test_pointcloud_builder.cpp  test_rdi_parser.cpp  test_shi_parser.cpp  test_someip_parser.cpp  test_spi_parser.cpp
src/afi920_msgs/: CMakeLists.txt  package.xml
src/afi920_msgs/msg/: Detection.msg  DetectionArray.msg  FovSegment.msg  HealthInfo.msg  RecognisableObject.msg  ReferenceTarget.msg  SensorPerformance.msg  SensorPose.msg
tools/: live_data_check.py  rdi_diag.py
